// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests trial apm_8.0.0 Service Map with data /api/apm/service-map returns the correct data 3`] = `
Array [
  Object {
    "data": Object {
      "agent.name": "nodejs",
      "id": "kibana",
      "service.environment": "production",
      "service.name": "kibana",
      "serviceAnomalyStats": Object {
        "actualValue": 635652.26283725,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-802c-high_mean_transaction_duration",
        "serviceName": "kibana",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
      "label": "8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
      "span.destination.service.resource": "8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
      "span.subtype": "https",
      "span.type": "external",
    },
  },
  Object {
    "data": Object {
      "agent.name": "nodejs",
      "id": "opbeans-node",
      "service.environment": "testing",
      "service.name": "opbeans-node",
    },
  },
  Object {
    "data": Object {
      "agent.name": "ruby",
      "id": "opbeans-ruby",
      "service.environment": "production",
      "service.name": "opbeans-ruby",
      "serviceAnomalyStats": Object {
        "actualValue": 24400.8867924528,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-802c-high_mean_transaction_duration",
        "serviceName": "opbeans-ruby",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "java",
      "id": "opbeans-java",
      "service.environment": "production",
      "service.name": "opbeans-java",
      "serviceAnomalyStats": Object {
        "actualValue": 19105.8492063492,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-802c-high_mean_transaction_duration",
        "serviceName": "opbeans-java",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "rum-js",
      "id": "opbeans-rum",
      "service.environment": "testing",
      "service.name": "opbeans-rum",
    },
  },
  Object {
    "data": Object {
      "id": ">postgresql",
      "label": "postgresql",
      "span.destination.service.resource": "postgresql",
      "span.subtype": "postgresql",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "agent.name": "python",
      "id": "opbeans-python",
      "service.environment": "production",
      "service.name": "opbeans-python",
      "serviceAnomalyStats": Object {
        "actualValue": 42906.4512195122,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-802c-high_mean_transaction_duration",
        "serviceName": "opbeans-python",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">elasticsearch",
      "label": "elasticsearch",
      "span.destination.service.resource": "elasticsearch",
      "span.subtype": "elasticsearch",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "agent.name": "dotnet",
      "id": "opbeans-dotnet",
      "service.environment": "production",
      "service.name": "opbeans-dotnet",
      "serviceAnomalyStats": Object {
        "actualValue": 653671.165289257,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-802c-high_mean_transaction_duration",
        "serviceName": "opbeans-dotnet",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">sqlite",
      "label": "sqlite",
      "span.destination.service.resource": "sqlite",
      "span.subtype": "sqlite",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "agent.name": "rum-js",
      "id": "kibana-frontend",
      "service.environment": "production",
      "service.name": "kibana-frontend",
      "serviceAnomalyStats": Object {
        "actualValue": 3580000,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-802c-high_mean_transaction_duration",
        "serviceName": "kibana-frontend",
        "transactionType": "page-load",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">epr-snapshot.elastic.co:443",
      "label": "epr-snapshot.elastic.co:443",
      "span.destination.service.resource": "epr-snapshot.elastic.co:443",
      "span.subtype": "https",
      "span.type": "external",
    },
  },
  Object {
    "data": Object {
      "id": ">redis",
      "label": "redis",
      "span.destination.service.resource": "redis",
      "span.subtype": "redis",
      "span.type": "cache",
    },
  },
  Object {
    "data": Object {
      "agent.name": "go",
      "id": "opbeans-go",
      "service.environment": "testing",
      "service.name": "opbeans-go",
    },
  },
  Object {
    "data": Object {
      "id": ">feeds.elastic.co:443",
      "label": "feeds.elastic.co:443",
      "span.destination.service.resource": "feeds.elastic.co:443",
      "span.subtype": "http",
      "span.type": "external",
    },
  },
  Object {
    "data": Object {
      "agent.name": "go",
      "id": "auditbeat",
      "service.environment": null,
      "service.name": "auditbeat",
    },
  },
  Object {
    "data": Object {
      "id": "kibana-frontend~>feeds.elastic.co:443",
      "source": "kibana-frontend",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "kibana-frontend",
        "service.environment": "production",
        "service.name": "kibana-frontend",
        "serviceAnomalyStats": Object {
          "actualValue": 3580000,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "kibana-frontend",
          "transactionType": "page-load",
        },
      },
      "target": ">feeds.elastic.co:443",
      "targetData": Object {
        "id": ">feeds.elastic.co:443",
        "label": "feeds.elastic.co:443",
        "span.destination.service.resource": "feeds.elastic.co:443",
        "span.subtype": "http",
        "span.type": "external",
      },
    },
  },
  Object {
    "data": Object {
      "id": "kibana-frontend~kibana",
      "source": "kibana-frontend",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "kibana-frontend",
        "service.environment": "production",
        "service.name": "kibana-frontend",
        "serviceAnomalyStats": Object {
          "actualValue": 3580000,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "kibana-frontend",
          "transactionType": "page-load",
        },
      },
      "target": "kibana",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "kibana",
        "service.environment": "production",
        "service.name": "kibana",
        "serviceAnomalyStats": Object {
          "actualValue": 635652.26283725,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "kibana",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "kibana~>8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
      "source": "kibana",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "kibana",
        "service.environment": "production",
        "service.name": "kibana",
        "serviceAnomalyStats": Object {
          "actualValue": 635652.26283725,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "kibana",
          "transactionType": "request",
        },
      },
      "target": ">8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
      "targetData": Object {
        "id": ">8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
        "label": "8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
        "span.destination.service.resource": "8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
        "span.subtype": "https",
        "span.type": "external",
      },
    },
  },
  Object {
    "data": Object {
      "id": "kibana~>elasticsearch",
      "source": "kibana",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "kibana",
        "service.environment": "production",
        "service.name": "kibana",
        "serviceAnomalyStats": Object {
          "actualValue": 635652.26283725,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "kibana",
          "transactionType": "request",
        },
      },
      "target": ">elasticsearch",
      "targetData": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "kibana~>epr-snapshot.elastic.co:443",
      "source": "kibana",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "kibana",
        "service.environment": "production",
        "service.name": "kibana",
        "serviceAnomalyStats": Object {
          "actualValue": 635652.26283725,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "kibana",
          "transactionType": "request",
        },
      },
      "target": ">epr-snapshot.elastic.co:443",
      "targetData": Object {
        "id": ">epr-snapshot.elastic.co:443",
        "label": "epr-snapshot.elastic.co:443",
        "span.destination.service.resource": "epr-snapshot.elastic.co:443",
        "span.subtype": "https",
        "span.type": "external",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-dotnet~>sqlite",
      "source": "opbeans-dotnet",
      "sourceData": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 653671.165289257,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
      "target": ">sqlite",
      "targetData": Object {
        "id": ">sqlite",
        "label": "sqlite",
        "span.destination.service.resource": "sqlite",
        "span.subtype": "sqlite",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-go~>postgresql",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-go~opbeans-dotnet",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
      "target": "opbeans-dotnet",
      "targetData": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 653671.165289257,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-go~opbeans-java",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 19105.8492063492,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-go~opbeans-python",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-go~opbeans-ruby",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 24400.8867924528,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-java~>postgresql",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 19105.8492063492,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~>postgresql",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~>redis",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": ">redis",
      "targetData": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "cache",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~opbeans-dotnet",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": "opbeans-dotnet",
      "targetData": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 653671.165289257,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~opbeans-go",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~opbeans-java",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 19105.8492063492,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-node~opbeans-python",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-node~opbeans-ruby",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 24400.8867924528,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>elasticsearch",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": ">elasticsearch",
      "targetData": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>postgresql",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>redis",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": ">redis",
      "targetData": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "cache",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~opbeans-go",
      "isInverseEdge": true,
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~opbeans-java",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 19105.8492063492,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~opbeans-node",
      "isInverseEdge": true,
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~>postgresql",
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 24400.8867924528,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-dotnet",
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 24400.8867924528,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-dotnet",
      "targetData": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 653671.165289257,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-go",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 24400.8867924528,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-java",
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 24400.8867924528,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 19105.8492063492,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-node",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 24400.8867924528,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-python",
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 24400.8867924528,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-dotnet",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
      },
      "target": "opbeans-dotnet",
      "targetData": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 653671.165289257,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-go",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-node",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-python",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-ruby",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 24400.8867924528,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
]
`;

exports[`APM API tests trial apm_8.0.0 Service Map with data /api/apm/service-map with ML data with the default apm user returns the correct anomaly stats 3`] = `
Object {
  "elements": Array [
    Object {
      "data": Object {
        "agent.name": "nodejs",
        "id": "kibana",
        "service.environment": "production",
        "service.name": "kibana",
        "serviceAnomalyStats": Object {
          "actualValue": 635652.26283725,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "kibana",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
        "label": "8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
        "span.destination.service.resource": "8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
        "span.subtype": "https",
        "span.type": "external",
      },
    },
    Object {
      "data": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
    Object {
      "data": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 24400.8867924528,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 19105.8492063492,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
      },
    },
    Object {
      "data": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 42906.4512195122,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 653671.165289257,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">sqlite",
        "label": "sqlite",
        "span.destination.service.resource": "sqlite",
        "span.subtype": "sqlite",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "rum-js",
        "id": "kibana-frontend",
        "service.environment": "production",
        "service.name": "kibana-frontend",
        "serviceAnomalyStats": Object {
          "actualValue": 3580000,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-802c-high_mean_transaction_duration",
          "serviceName": "kibana-frontend",
          "transactionType": "page-load",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">epr-snapshot.elastic.co:443",
        "label": "epr-snapshot.elastic.co:443",
        "span.destination.service.resource": "epr-snapshot.elastic.co:443",
        "span.subtype": "https",
        "span.type": "external",
      },
    },
    Object {
      "data": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "cache",
      },
    },
    Object {
      "data": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
    Object {
      "data": Object {
        "id": ">feeds.elastic.co:443",
        "label": "feeds.elastic.co:443",
        "span.destination.service.resource": "feeds.elastic.co:443",
        "span.subtype": "http",
        "span.type": "external",
      },
    },
    Object {
      "data": Object {
        "agent.name": "go",
        "id": "auditbeat",
        "service.environment": null,
        "service.name": "auditbeat",
      },
    },
    Object {
      "data": Object {
        "id": "kibana-frontend~>feeds.elastic.co:443",
        "source": "kibana-frontend",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "kibana-frontend",
          "service.environment": "production",
          "service.name": "kibana-frontend",
          "serviceAnomalyStats": Object {
            "actualValue": 3580000,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "kibana-frontend",
            "transactionType": "page-load",
          },
        },
        "target": ">feeds.elastic.co:443",
        "targetData": Object {
          "id": ">feeds.elastic.co:443",
          "label": "feeds.elastic.co:443",
          "span.destination.service.resource": "feeds.elastic.co:443",
          "span.subtype": "http",
          "span.type": "external",
        },
      },
    },
    Object {
      "data": Object {
        "id": "kibana-frontend~kibana",
        "source": "kibana-frontend",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "kibana-frontend",
          "service.environment": "production",
          "service.name": "kibana-frontend",
          "serviceAnomalyStats": Object {
            "actualValue": 3580000,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "kibana-frontend",
            "transactionType": "page-load",
          },
        },
        "target": "kibana",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "kibana",
          "service.environment": "production",
          "service.name": "kibana",
          "serviceAnomalyStats": Object {
            "actualValue": 635652.26283725,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "kibana",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "kibana~>8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
        "source": "kibana",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "kibana",
          "service.environment": "production",
          "service.name": "kibana",
          "serviceAnomalyStats": Object {
            "actualValue": 635652.26283725,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "kibana",
            "transactionType": "request",
          },
        },
        "target": ">8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
        "targetData": Object {
          "id": ">8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
          "label": "8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
          "span.destination.service.resource": "8b37cb7ca2ae49ada54db165f32d3a19.us-central1.gcp.foundit.no:9243",
          "span.subtype": "https",
          "span.type": "external",
        },
      },
    },
    Object {
      "data": Object {
        "id": "kibana~>elasticsearch",
        "source": "kibana",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "kibana",
          "service.environment": "production",
          "service.name": "kibana",
          "serviceAnomalyStats": Object {
            "actualValue": 635652.26283725,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "kibana",
            "transactionType": "request",
          },
        },
        "target": ">elasticsearch",
        "targetData": Object {
          "id": ">elasticsearch",
          "label": "elasticsearch",
          "span.destination.service.resource": "elasticsearch",
          "span.subtype": "elasticsearch",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "kibana~>epr-snapshot.elastic.co:443",
        "source": "kibana",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "kibana",
          "service.environment": "production",
          "service.name": "kibana",
          "serviceAnomalyStats": Object {
            "actualValue": 635652.26283725,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "kibana",
            "transactionType": "request",
          },
        },
        "target": ">epr-snapshot.elastic.co:443",
        "targetData": Object {
          "id": ">epr-snapshot.elastic.co:443",
          "label": "epr-snapshot.elastic.co:443",
          "span.destination.service.resource": "epr-snapshot.elastic.co:443",
          "span.subtype": "https",
          "span.type": "external",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-dotnet~>sqlite",
        "source": "opbeans-dotnet",
        "sourceData": Object {
          "agent.name": "dotnet",
          "id": "opbeans-dotnet",
          "service.environment": "production",
          "service.name": "opbeans-dotnet",
          "serviceAnomalyStats": Object {
            "actualValue": 653671.165289257,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-dotnet",
            "transactionType": "request",
          },
        },
        "target": ">sqlite",
        "targetData": Object {
          "id": ">sqlite",
          "label": "sqlite",
          "span.destination.service.resource": "sqlite",
          "span.subtype": "sqlite",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-go~>postgresql",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-go~opbeans-dotnet",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
        "target": "opbeans-dotnet",
        "targetData": Object {
          "agent.name": "dotnet",
          "id": "opbeans-dotnet",
          "service.environment": "production",
          "service.name": "opbeans-dotnet",
          "serviceAnomalyStats": Object {
            "actualValue": 653671.165289257,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-dotnet",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-go~opbeans-java",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 19105.8492063492,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-go~opbeans-python",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 42906.4512195122,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-go~opbeans-ruby",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 24400.8867924528,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-java~>postgresql",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 19105.8492063492,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~>postgresql",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~>redis",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": ">redis",
        "targetData": Object {
          "id": ">redis",
          "label": "redis",
          "span.destination.service.resource": "redis",
          "span.subtype": "redis",
          "span.type": "cache",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~opbeans-dotnet",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-dotnet",
        "targetData": Object {
          "agent.name": "dotnet",
          "id": "opbeans-dotnet",
          "service.environment": "production",
          "service.name": "opbeans-dotnet",
          "serviceAnomalyStats": Object {
            "actualValue": 653671.165289257,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-dotnet",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~opbeans-go",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~opbeans-java",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 19105.8492063492,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-node~opbeans-python",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 42906.4512195122,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-node~opbeans-ruby",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 24400.8867924528,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>elasticsearch",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 42906.4512195122,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">elasticsearch",
        "targetData": Object {
          "id": ">elasticsearch",
          "label": "elasticsearch",
          "span.destination.service.resource": "elasticsearch",
          "span.subtype": "elasticsearch",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>postgresql",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 42906.4512195122,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>redis",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 42906.4512195122,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">redis",
        "targetData": Object {
          "id": ">redis",
          "label": "redis",
          "span.destination.service.resource": "redis",
          "span.subtype": "redis",
          "span.type": "cache",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-go",
        "isInverseEdge": true,
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 42906.4512195122,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-java",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 42906.4512195122,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 19105.8492063492,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-node",
        "isInverseEdge": true,
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 42906.4512195122,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~>postgresql",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 24400.8867924528,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-dotnet",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 24400.8867924528,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-dotnet",
        "targetData": Object {
          "agent.name": "dotnet",
          "id": "opbeans-dotnet",
          "service.environment": "production",
          "service.name": "opbeans-dotnet",
          "serviceAnomalyStats": Object {
            "actualValue": 653671.165289257,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-dotnet",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-go",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 24400.8867924528,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-java",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 24400.8867924528,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 19105.8492063492,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-node",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 24400.8867924528,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-python",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 24400.8867924528,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 42906.4512195122,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-dotnet",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
        },
        "target": "opbeans-dotnet",
        "targetData": Object {
          "agent.name": "dotnet",
          "id": "opbeans-dotnet",
          "service.environment": "production",
          "service.name": "opbeans-dotnet",
          "serviceAnomalyStats": Object {
            "actualValue": 653671.165289257,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-dotnet",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-go",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-node",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-python",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 42906.4512195122,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-ruby",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 24400.8867924528,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-802c-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
  ],
}
`;
